# puddle

./: .gitignore  CMakeLists.txt  build-and-run.sh  build-and-test.sh  main.cpp
assets/: diffuse.frag  diffuse.vert
engine/: camera.cpp  camera.h  component.h  gameobject.cpp  gameobject.h
glad/: glad.c  glad.h
input/: mouse.cpp  mouse.h
math/: quaternion.cpp  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
math/tests/: CMakeLists.txt  quaternion-tests.cpp  vector2-tests.cpp  vector3-tests.cpp
puddle/: puddle.h
puddle/engine/: camera.h  component.cpp  gameobject.cpp
puddle/input/: mouse.cpp  mouse.h
puddle/math/: math.hpp  quaternion.h  vector3.h
puddle/math/tests/: CMakeLists.txt  quaternion-tests.cpp  vector2-tests.cpp
puddle/rendering/: mesh.h  shader.cpp  shader.h
puddle/utils/: fileio.h
rendering/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
utils/: fileio.cpp  fileio.h
